# attendance

./: .env  .env.example  Cargo.toml  README.md  config.toml  diesel.toml  roster.json.example  weekly_data.json.example
examples/: attendees.txt  email_body.html  email_cumulative_body.html  roster.csv  weekly_data.json
migrations/2025-03-19-213310_roster/: down.sql
migrations/2025-03-20-162744_create_students/: down.sql  up.sql
migrations/2025-03-20-163747_create_attendance/: down.sql  up.sql
migrations/2025-03-20-163913_create_weeks/: down.sql  up.sql
migrations/2025-04-17-160000_create_students/: up.sql
migrations/2025-04-17-160746_create_weeks/: down.sql  up.sql
migrations/2025-04-17-160808_create_attendance/: up.sql
src/: cli.rs  display.rs  lib.rs  mailer.rs  main.rs  manager.rs  models.rs  roster.rs  schema.rs
