[package]
name = "attendance"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "setup"

[dependencies]
chrono = "0.4.40"
csv = "1.3.1"
diesel = { version = "2.2.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
serde = { version = "1.0.219", features = ["derive"] }
