[package]
name = "attendance"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
config = "0.15.11"
csv = "1.3.1"
diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
dotenvy = "0.15"
lettre = "0.11.15"
native-tls = "0.2.14"
serde = { version = "1.0.219", features = ["derive"] }
tabled = "0.18.0"
